# medicare_rag

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  EVAL_COMPARISON.md  HIPAA_CONTROLS.md  PLAN.md  POC_PLAN.md  README.md  app.py  pyproject.toml
docs/: EMBEDDING_MODELS_RESEARCH.md
scripts/: compare_embeddings.py  download_all.py  eval_metrics.json  eval_metrics_enriched.json  eval_questions.json  eval_report.md  eval_report_enriched.md  ingest_all.py  query.py  run_rag_eval.py  validate_and_eval.py
skills/: advance-beneficiary-notices.md  anti-kickback-statute.md  billing-and-coding.md  charge-capture.md  chunking-strategy.md  claim-forms.md  claim-submission.md  claims-lifecycle.md  cms-role.md  code-specificity-reduces-denials.md  coding-audits.md  coding-drives-reimbursement.md  coding-workflow.md  collections-and-ar.md  compliance-and-regulations.md  compliance-program-elements.md  corrected-claims.md  coverage-determination.md  coverage-gap-identification.md  cpt-codes.md  denial-management.md  denial-prevention.md  documentation-quality-determines-revenue.md  download-pipeline.md  eligibility-verification.md  embedding-model.md  encounter-documentation.md  eval-framework.md  extraction-pipeline.md  false-claims-act.md  frequency-limitations.md  generation-chain.md  hcpcs-level-ii.md  hipaa-compliance.md  icd-10-cm.md  index.md  iom-manuals.md  lcd-articles.md  local-coverage-determinations.md  mac-adjudication.md  (+30 more)
src/medicare_rag/: __init__.py  config.py
src/medicare_rag/data/: topic_definitions.json
src/medicare_rag/download/: __init__.py  _manifest.py  _utils.py  codes.py  iom.py  mcd.py
src/medicare_rag/index/: __init__.py  embed.py  store.py
src/medicare_rag/ingest/: __init__.py  chunk.py  cluster.py  enrich.py  extract.py  summarize.py
src/medicare_rag/query/: __init__.py  chain.py  expand.py  hybrid.py  retriever.py
tests/: conftest.py  test_app.py  test_cluster.py  test_config.py  test_download.py  test_enrich.py  test_hybrid.py  test_index.py  test_ingest.py  test_query.py  test_retriever_boost.py  test_search_validation.py  test_summarize.py
