[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medicare-rag"
version = "0.1.0"
description = "Medicare RAG POC: RAG system for Medicare RCM questions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "python-dotenv",
    "beautifulsoup4",
    "pytest",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
