[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medicare-rag"
version = "0.1.0"
description = "Medicare RAG POC: RAG system for Medicare RCM questions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "chromadb",
    "httpx",
    "langchain-chroma",
    "langchain-community",
    "langchain-core",
    "langchain-huggingface",
    "langchain-text-splitters",
    "transformers",
    "accelerate",
    "pdfplumber",
    "python-dotenv",
    "pytest",
    "sentence-transformers",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28.0"]
dev = ["ruff"]
# Optional: enables PDF fallback for scanned/image PDFs when pdfplumber yields little text.
# Without it, those PDFs may yield empty or short extractions.
unstructured = ["unstructured"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
