[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medicare-rag"
version = "0.1.0"
description = "Medicare RAG POC: RAG system for Medicare RCM questions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "chromadb>=1.0,<2",
    "defusedxml>=0.7",
    "httpx>=0.24",
    "langchain-chroma>=1.0,<2",
    "langchain-community>=0.2",
    "langchain-core>=1.0,<2",
    "langchain-huggingface>=0.1",
    "langchain-text-splitters>=0.2",
    "transformers>=4.40",
    "accelerate>=0.20",
    "pdfplumber>=0.10",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28.0"]
hybrid = ["rank-bm25>=0.2"]
dev = ["ruff", "pytest", "rank-bm25>=0.2"]
# Optional: enables PDF fallback for scanned/image PDFs when pdfplumber yields little text.
# Without it, those PDFs may yield empty or short extractions.
unstructured = ["unstructured"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
